# PortfolioPlatform

./: .gitignore  Makefile  README.md  docker-compose.yml  portfolio-event-driven-roadmap.md  requirements-dev.txt  requirements.txt
docs/: alembic.md  backend-engineer-playbook.md  code-overview.md  debugging.md  domain-model.md  quickstart.md  react-basics.md  sample-portfolio.csv  stato-progetto-e-note-backend.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
scripts/: logs.ps1  migrate.ps1  start-all.ps1  test.ps1  up.ps1
services/transaction/: Dockerfile  pyproject.toml  test.db
services/transaction/app/: main.py
services/transaction/app/api/: imports.py  portfolio.py  schemas.py  transactions.py
services/transaction/app/core/: config.py  database.py  errors.py  events.py
services/transaction/app/domain/: models.py  portfolio.py  services.py
services/transaction/migrations/: env.py  script.py.mako
services/transaction/migrations/versions/: 0001_create_transactions.py  0002_add_idempotency_key.py  0003_add_asset_metadata.py
services/transaction/tests/: test_transactions_api.py
