[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transactions-service"
version = "0.1.0"
description = "Transactions Service for Event-Driven Portfolio Platform"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "psycopg2-binary",
  "python-dotenv",
  "python-multipart",
  "python-json-logger"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
factory = false
